Use short url controller and l path for short urls

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -1,7 +1,9 @@
-<%= @bookmark.link %>
+<div class="bookmark">
+  <%= @bookmark.link %>
 
-<%  if @bookmark.description %>
-  <p><%= @bookmark.description %></p>
-<% end -%>
+  <%  if @bookmark.description %>
+    <p><%= @bookmark.description %></p>
+  <% end -%>
 
-<%= render :partial  => 'shared/metadata', :locals  => {:presenter  => @bookmark} %>
+  <%= render :partial  => 'shared/metadata', :locals  => {:presenter  => @bookmark} %>
+</div>
