Added ability to view all links

--- a/app/assets/stylesheets/kawa.css.scss
+++ b/app/assets/stylesheets/kawa.css.scss
@@ -1,4 +1,4 @@
-.page-metadata, .quote-metadata, .bookmark-metadata {
+.page-metadata, .quote-metadata, .link-metadata, .bookmark-metadata {
   background-color: whiteSmoke;
   font-size: 85%;
   color: #555;
