--- a/app/views/shared/_metadata.html.erb
+++ b/app/views/shared/_metadata.html.erb
@@ -2,6 +2,7 @@
   <div class="span8">
     <%= presenter.created_at %>
     <%= presenter.updated_at %>
+    <%= presenter.view_count %>
   </div>
   <div class="tags pull-right">
     <% if presenter.tags? %>
