Generate screenshots of urls

--- a/app/assets/stylesheets/quotes.css.scss
+++ b/app/assets/stylesheets/quotes.css.scss
@@ -21,6 +21,11 @@ div.quote, div.link {
   }
 }
 
+div.link div.control{
+  margin-top:10px;
+  
+}
+
 
 div.hover div.control {
   visibility: visible;
