--- a/app/views/links/_link.html.erb
+++ b/app/views/links/_link.html.erb
@@ -1,7 +1,18 @@
 <% link = LinkPresenter.new(link) %>
-<div class="link fluid-row">
-  <%= link.link %>
-  <%= render :partial  => "shared/control", :locals  => {:model  => link.model, :render_destroy  => link.can_delete?, :edit_path  => edit_polymorphic_path(link.model)} %>
+<div class="link row-fluid">
+  <div>
+    <div class="thumbnails span2">
+      <%= link.url_screenshot_thumbnail %>
+    </div>
+  </div>
+  <div class="span10">
+    <%= link.link %>
+  </div>
+  <%= render :partial  => "shared/control", 
+    :locals  => {:model  => link.model, 
+                 :html_class  => "span12",
+                 :render_destroy  => link.can_delete?, 
+                 :edit_path  => edit_polymorphic_path(link.model)} %>
 </div>
 
 
