--- a/app/views/shared/_control.html.erb
+++ b/app/views/shared/_control.html.erb
@@ -1,4 +1,4 @@
-<div class="control"> 
+<div class="control <%= html_class if defined?(html_class) %>"> 
   <span class="label label-info">
     <%= link_to 'View', model %>
   </span>
