rails upgrade warning fixes

--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -5,7 +5,7 @@
 <div class="form-actions row-fluid">
   <div class="span12">
   <%= link_to 'Edit quote', edit_quote_path(@quote.model), :rel  => "edit-quote", :class  => "btn btn-small", :alt  => "Edit", :title  => "Edit" %>
-  <%= link_to 'Delete quote', @quote.model, :rel  => 'delete-quote', :method  => :delete, :confirm  => "Are you sure?", :class  => "btn-danger btn-small", :alt  => "Delete" %>
+  <%= link_to 'Delete quote', @quote.model, :rel  => 'delete-quote', :method  => :delete, :data  => {:confirm  => "Are you sure?"}, :class  => "btn-danger btn-small", :alt  => "Delete" %>
   </div>
 </div>
 
