--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -10,6 +10,6 @@
 
 <div class="form-actions row-fluid">
   <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn-info btn-small", :alt  => "Edit", :title  => "Edit" %>
-  <%= link_to 'Delete page', @page.model, :rel  => 'delete-page', :method  => :delete, :confirm  => "Are you sure?", :class  => "btn-danger btn-small", :alt  => "Delete" %>
+  <%= link_to 'Delete page', @page.model, :rel  => 'delete-page', :method  => :delete, :data  => {confirm:  "Are you sure?"}, :class  => "btn-danger btn-small", :alt  => "Delete" %>
 </div>
 
