support private bookmarks

--- a/app/views/links/_form.html.erb
+++ b/app/views/links/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :url, :input_html  => {:class  => "span8"} %>
     <%= f.input :title, :input_html  => {:class  => "span8"} %>
     <%= f.input :description, :as  => :text, :input_html  => {:class  => "span8", :rows  => 10} %> 
+    <%= f.input :private, :as  => :boolean %>
     <%= f.input :tags, :input_html  => {:class  => "span4"} %>
 
     <div class="form-actions">
