--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -6,22 +6,15 @@
         <li class="<%= 'active' if on_path?('page')  %>"><%= link_to 'Pages', pages_path %></li>
 
         <li class="dropdown <%= 'active' if on_path?('quote') %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Quotes
-            <b class="caret"></b>
-          </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quotes<b class="caret"></b> </a>
           <ul class="dropdown-menu">
             <li><%= link_to "New Quote", new_quote_path %></li>
             <li class="divider"></li>
             <li><%= link_to "View all quotes", quotes_path %></li>
           </ul>
         </li>
-
         <li class="dropdown <%= 'active' if on_path?('bookmark') %>">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            Bookmarks
-            <b class="caret"></b>
-          </a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookmarks<b class="caret"></b> </a>
           <ul class="dropdown-menu">
             <li><%= link_to "New Bookmark", new_bookmark_path %></li>
             <li class="divider"></li>
@@ -29,10 +22,21 @@
           </ul>
         </li>
       </ul>
-
       <form action="<%= pages_path %>" class="form-search navbar-search pull-left" method='get'>
         <input type="text" class="search-query span-2" placeholder="Search" name="query"/>
       </form>
+      <ul class="nav pull-right">
+        <% if user_signed_in?  %>
+          <li class="dropdown">
+          	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+          	<ul class="dropdown-menu">
+              <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+          	</ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Sign in", new_user_session_path %></li>
+        <%end %>
+      </ul>
     </div>
   </div>
 </div>
