--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -30,6 +30,7 @@
           <li class="dropdown">
           	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
           	<ul class="dropdown-menu">
+              <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
               <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
           	</ul>
           </li>
