Secure private pages, links, and bookmarks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="span2">
-        <div class="well">
+        <div class="well sidebar">
           <%= render :partial  => "shared/sidebar" %>
         </div>
       </div>
