--- a/app/views/shared/_metadata.html.erb
+++ b/app/views/shared/_metadata.html.erb
@@ -4,6 +4,7 @@
       <i class="icon-lock"></i>
     <%  end %>
     <%= presenter.created_at %>
+    <%= presenter.creator %>
     <%= presenter.updated_at %>
     <%= presenter.view_count %>
   </div>
