--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -8,8 +8,15 @@
 
 <%= render :partial  => 'shared/metadata', :locals  => {:presenter => @page} %>
 
-<div class="form-actions row-fluid">
-  <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn-info btn-small", :alt  => "Edit", :title  => "Edit" %>
-  <%= link_to 'Delete page', @page.model, :rel  => 'delete-page', :method  => :delete, :data  => {confirm:  "Are you sure?"}, :class  => "btn-danger btn-small", :alt  => "Delete" %>
-</div>
+
+<% if @page.updatable? || @page.deletable?  %>
+  <div class="form-actions row-fluid">
+    <% if @page.updatable? %>
+      <%= link_to 'Edit page', edit_page_path(@page.model), :rel  => "edit-page", :class  => "btn-info btn-small", :alt  => "Edit", :title  => "Edit" %>
+    <% end %>
+    <% if @page.deletable? %>
+      <%= link_to 'Delete page', @page.model, :rel  => 'delete-page', :method  => :delete, :data  => {confirm:  "Are you sure?"}, :class  => "btn-danger btn-small", :alt  => "Delete" %>
+    <% end %>
+  </div>
+<% end %>
 
