--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -10,7 +10,9 @@
       <h6>Pages</h6>
       <ul>
         <% @link.pages.each do |page| %>
-          <li><%= link_to page.name, page_path(page) %></li>
+          <% if current_or_guest_user.can_read?(page) %>
+            <li><%= link_to page.name, page_path(page) %></li>
+          <% end %>
         <% end %>
       </ul>
     <% end %>
