Display private pages in the sidebar

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,2 +1,5 @@
-<h5>Recently modified:</h5>
-<%= @sidebar.recently_changed %>
+<%= @sidebar.recently_changed_pages %>
+
+<%= @sidebar.current_user_private_pages %>
+
+
