Style quora links

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -13,6 +13,11 @@ a.github {
   padding-right: 19px;
 }
 
+a.quora {
+  background: url(quora.png) no-repeat right center;
+  padding-right: 19px;
+}
+
 .page-data {
   min-height: 200px;
 }
