--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -20,3 +20,11 @@ a.quora {
 .page-data {
   min-height: 200px;
 }
+
+#cloud-view text:hover {
+  opacity: 0.7 !important;
+}
+
+#cloud-view text {
+  cursor: pointer;
+}
