--- a/app/views/page_tags/index.html.erb
+++ b/app/views/page_tags/index.html.erb
@@ -1,7 +1,22 @@
 <div class="row-fluid">
-  <ul>
-    <% @tags.each do |tag|  %>
-      <li><%= link_to tag.name, pages_path(:tag  => tag.name) %></li>
-    <% end %>
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#list-view" data-toggle="tab">List View</a></li>
+    <li><a href="#cloud-view" data-toggle="tab">Cloud View</a></li>
   </ul>
+  
+  <div class="tab-content">
+    <div id="list-view" class="tab-pane active">
+      <ul>
+        <% @tags.each do |tag|  %>
+           <li><%= link_to tag.name, pages_path(:tag  => tag.name) %></li> 
+        <% end %>
+      </ul>
+    </div>
+    <div id="cloud-view" class="tab-pane">
+    </div>
+  </div>
 </div>
+
+<% content_for(:javascript) do %>
+  var tagManager = new Kawa.TagManager(<%= raw @tags.to_json %>);
+<% end %>
