--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require bootstrap_and_overrides
  *= require select2
+ *= require highlight-github-theme
  *= require_self
  *= require_tree . 
 */
@@ -12,6 +13,10 @@ body {
   padding-top: 60px;
   background-color: #fffffc;
   color: #2b2b2b;
+}
+
+pre.code {
+  background-color: #f8f8ff;
 }
 
 a.absent {
