First pass at page attachments optimized for images for right now
* Drag & drop support
* Retina support

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require select2
  *= require highlight-github-theme
+ *= require dropzone/basic
  *= require_self
  *= require_tree . 
 */
