--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 </head>
 <body>
   <%= render "shared/nav" %>
-  <div class="container">
+  <div class="container container-full">
     <div class="row">
       <div class="col-lg-10">
         <div class="container main">
